<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView style="@style/scrollViewStyle">

        <FrameLayout
            android:id="@+id/frmMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/llRegister_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtOldPassword"
                        style="@style/RegisterEditText"
                        android:inputType="textPassword"
                        android:hint="@string/old_password" />

                    <View
                        style="@style/ViewStyle"
                        android:layout_marginTop="8dp" />

                    <EditText
                        android:id="@+id/edtNewPassword"
                        style="@style/RegisterEditText"
                        android:inputType="textPassword"
                        android:layout_marginTop="16dp"
                        android:hint="@string/new_password" />

                    <View
                        style="@style/ViewStyle"
                        android:layout_marginTop="8dp" />

                    <EditText
                        android:id="@+id/edtConfirm_password"
                        style="@style/RegisterEditText"
                        android:inputType="textPassword"
                        android:layout_marginTop="16dp"
                        android:hint="@string/confirm_password"
                        android:maxLength="60" />

                    <View
                        style="@style/ViewStyle"
                        android:layout_marginTop="8dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvSaveChanges"
                    style="@style/RegisterButtonStyle"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/textview_disable_selector"
                    android:layout_marginEnd="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/save_changes" />

            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>