<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView style="@style/scrollViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                layout="@layout/logo_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="78dp" />

            <TextView
                android:id="@+id/tvRegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/forgot_password_title"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/llRegister_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/RegisterEditText"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <View
                    style="@style/ViewStyle"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvSubmit"
                style="@style/RegisterButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="36dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</layout>