<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/are_you_sure_want_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent" />

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/prlReschedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    app:layout_widthPercent="50%" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvYes"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/tvYes"
                    android:layout_toRightOf="@+id/tvYes"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/no"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    app:layout_widthPercent="50%" />

            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>